--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.6.0'
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
 }
