--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Foodgo"
         tools:targetApi="31">
         <activity
+            android:name=".Order.Order_Complete"
+            android:exported="false" />
+        <activity
+            android:name=".Order.Order_product"
+            android:exported="false" />
+        <activity
             android:name=".Login"
             android:exported="false" />
         <activity
@@ -24,10 +30,6 @@
         <activity
             android:name=".Profile"
             android:exported="false" />
-        <activity
-            android:name=".ui.login.Profile"
-            android:exported="false"
-            android:label="@string/title_activity_profile" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
